--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -58,5 +58,9 @@ button:hover {
 }
 
 img {
-    margin-top: 10px;
+    width: 150px;
+    height: auto;
+    display: block;
+    margin: 0 auto;
 }
+
